--- a/404.html
+++ b/404.html
@@ -133,7 +133,7 @@
 
     <footer id="footer" class="footer">
       <div class="social-links">
-      <a href="syunn@outlook.com" class="iconfont icon-email" title="email"></a>
+      <a href="4009795@qq.com" class="iconfont icon-email" title="email"></a>
   <a href="https://juntf.github.io/index.xml" type="application/rss+xml" class="iconfont icon-rss" title="rss"></a>
 </div>
 
